--- a/build.xml
+++ b/build.xml
@@ -583,20 +583,14 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
             <filepath refid="jacoco.lib.search.path"/>
         </available>
         <fail unless="jacocoant.jar.present" message="Please install jacocoant.jar in lib-directory  (or in ant classpath) to run Jacoco, see README."/>                
-	<taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
-            <classpath refid="jacoco.lib.search.path"/>            
-            <classpath path="lib/jacoco/lib/jacocoant.jar"/>            
-            <classpath path="${jacoco.home}/lib/jacocoant.jar"/>            
-            <classpath location="lib/jacoco/lib/jacocoant.jar"/>            
-            <classpath location="${jacoco.home}/lib/jacocoant.jar"/>            
-        </taskdef>    
+	<taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml"/>
     </target>
         
     <property name="jacoco_out" value="jacoco.exec"/>
         
     <target name="-set-jacocoagent" if="jacoco">
         <antcall target="-check_jacoco"/>        
-        <jacoco:agent property="jacocoagent" includes="org.opensolaris.*" excludes="org.opensolaris.opengrok.management.client.*:org.apache.*" destfile="${jacoco_out}" append="false"/>
+        <jacoco:agent property="jacocoagent" includes="org.opensolaris.*" excludes="org.opensolaris.opengrok.management.client.*:org.apache.*" destfile="${jacoco_out}"/>
         <!-- Ugly hack to leverage IDE variable to inject jacoco 
         this will most probably break once Netbeans folks will drop this variable!
         -->
@@ -640,11 +634,7 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
     </target>
 
     <target name="emma-instrument" depends="compile, -check_emma" description="Instruments the source code for Emma code coverage analysis">
-        <path id="emma.lib" >
-            <pathelement location="lib/emma.jar"/>
-            <pathelement location="lib/emma_ant.jar"/>
-        </path>
-        <taskdef resource="emma_ant.properties" classpathref="emma.lib"/>
+	    <taskdef resource="emma_ant.properties"/>
         <mkdir dir="${coverage.dir}" />
         <emma enabled="true">
             <instr instrpath="build/classes"
