make emma and jacoco be usable with their own dir

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -119,7 +119,11 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}:\
     lib/derby.jar:\
-    ${file.reference.opengrok-dev-test}
+    ${file.reference.opengrok-dev-test}:\
+    ${jacoco.home}/lib:\
+    ${emma.home}:\
+    lib/jacoco/lib:\
+    lib/emma
 source.encoding=UTF-8
 src.dir=src
 src.generatedsrc.dir=generatedsrc
