fix packaging for the egrok push, nb 8.0.1 changes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ javac.classpath=\
     ${file.reference.ant.jar}:\
     ${file.reference.bcel-5.2.jar}:\
     ${file.reference.jrcs.jar}:\
-    ${file.reference.json-simple-1.1.1.jar:\
+    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
