--- a/.classpath
+++ b/.classpath
@@ -10,13 +10,13 @@
 	<classpathentry kind="lib" path="build/jrcs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="build/test/classes"/>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-4.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-queryparser-4.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-suggest-4.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-4.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queryparser-4.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-suggest-4.10.0.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="var" path="ANT_HOME/ant.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="ANT_HOME/lib/ant.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
