--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -206,6 +206,10 @@ Copyright (c) 2010, 2011, Oracle and/or its affiliates. All rights reserved.
             <artifactId>servlet-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactIdjson-simple</artifactId>
+        </dependency>    
+        <dependency>
             <groupId>org.opensolaris.opengrok</groupId>
             <artifactId>jrcs</artifactId>
             <version>${project.version}</version>
