--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
                 <version>2.5</version>
             </dependency>
             <dependency>
+                    <groupId>com.googlecode.json-simple</groupId>
+                    <artifactId>json-simple</artifactId>
+                    <version>1.1.1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.ant</groupId>
                 <artifactId>ant</artifactId>
                 <version>1.9.2</version>
@@ -216,7 +221,7 @@
     <repositories>
         <repository>
             <id>maven.org</id>
-            <name>mave.org</name>
+            <name>maven.org</name>
             <url>http://repo.maven.apache.org/maven2/</url>
             <layout>default</layout>
         </repository>
