--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
     </modules>
 
     <properties>
-        <lucene.version>4.10.1</lucene.version>
+	<lucene.version>4.10.1</lucene.version>
+	<mavenjavadocplugin.version>2.9.1</mavenjavadocplugin.version>
         <compileSource>1.7</compileSource>
         <compileTarget>1.7</compileTarget>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -131,6 +132,15 @@
                 <version>1.0-alpha-3</version>
                 <inherited>true</inherited>
             </plugin>
+	    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+		<version>${mavenjavadocplugin.version}</version>
+            </plugin>
+           <plugin>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <version>2.7</version>
+           </plugin>
         </plugins>
     </build>
 
@@ -178,7 +188,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>${mavenjavadocplugin.version}</version>
                 <reportSets>
                     <reportSet>
                         <id>non-aggregate</id>
