--- a/build.xml
+++ b/build.xml
@@ -520,15 +520,20 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
     </target>
 
     <target name="-check_pmd" description="Check that pmd jar files are present">
-        <available file="pmd.jar" type="file" property="pmd.jar.present">
+        <available file="pmd-core.jar" type="file" property="pmd-core.jar.present">
+            <filepath refid="pmd.lib.search.path"/>
+        </available>        
+        <fail unless="pmd-core.jar.present" message="Please install pmd-core.jar in lib-directory  (or in ant classpath) to run PMD, see README."/>
+        <available file="pmd-java.jar" type="file" property="pmd-java.jar.present">
             <filepath refid="pmd.lib.search.path"/>
         </available>
-        <fail unless="pmd.jar.present" message="Please install pmd.jar in lib-directory  (or in ant classpath) to run PMD, see README."/>
+        <fail unless="pmd-java.jar.present" message="Please install pmd-java.jar in lib-directory  (or in ant classpath) to run PMD, see README."/>
     </target>
     
     <target name="pmd" depends="compile, -check_pmd" description="Run PMD on OpenGrok source code">
         <path id="pmd.lib" >
-            <pathelement location="${pmd.home}/lib/pmd.jar"/>
+            <pathelement location="${pmd.home}/lib/pmd-core.jar"/>
+            <pathelement location="${pmd.home}/lib/pmd-java.jar"/>
             <pathelement location="${pmd.home}/lib/jaxen.jar"/>
             <pathelement location="${pmd.home}/lib/asm.jar"/>
         </path>
@@ -548,8 +553,10 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
 
     <target name="cpd-xml" depends="compile, -check_pmd" description="Run CPD on OpenGrok source code, print output in xml">
         <path id="pmd.lib" >
-            <pathelement location="${pmd.home}/lib/pmd.jar"/>
+            <pathelement location="${pmd.home}/lib/pmd-core.jar"/>
+            <pathelement location="${pmd.home}/lib/pmd-java.jar"/>
             <pathelement location="${pmd.home}/lib/jaxen.jar"/>
+            <pathelement location="${pmd.home}/lib/asm.jar"/>
         </path>
         <taskdef name="cpd" classname="net.sourceforge.pmd.cpd.CPDTask" classpathref="pmd.lib"/>
         <cpd minimumTokenCount="100" format="xml" outputFile="pmd/cpd_report.xml">
@@ -564,8 +571,10 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
 
     <target name="cpd" depends="compile, -check_pmd" description="Run CPD on OpenGrok source code">
         <path id="pmd.lib" >
-            <pathelement location="${pmd.home}/lib/pmd.jar"/>
+            <pathelement location="${pmd.home}/lib/pmd-core.jar"/>
+            <pathelement location="${pmd.home}/lib/pmd-java.jar"/>
             <pathelement location="${pmd.home}/lib/jaxen.jar"/>
+            <pathelement location="${pmd.home}/lib/asm.jar"/>
         </path>
         <taskdef name="cpd" classname="net.sourceforge.pmd.cpd.CPDTask" classpathref="pmd.lib"/>
         <cpd minimumTokenCount="100" outputFile="pmd/cpd_report.txt">
