--- a/build.xml
+++ b/build.xml
@@ -149,7 +149,6 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
     <path id="pmd.lib.search.path">
         <pathelement path="${pmd.home}/lib/"/>
         <pathelement path="${java.class.path}"/>
-        <pathelement path="lib/pmd/lib/"/>
     </path>
 
     <target name="-check-jflex" description="Check that jflex jar file is present">
@@ -527,14 +526,14 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
         </available>
         <fail unless="pmd-java.jar.present" message="Please install pmd-java.jar in lib-directory  (or in ant classpath) to run PMD, see README."/>
     </target>
-    
+
+    <path id="pmd.lib" >
+	<fileset dir="${pmd.home}/lib">
+		<include name="*.jar"/>
+	</fileset>
+    </path>
+
     <target name="pmd" depends="compile, -check_pmd" description="Run PMD on OpenGrok source code">
-        <path id="pmd.lib" >
-            <pathelement location="${pmd.home}/lib/pmd-core.jar"/>
-            <pathelement location="${pmd.home}/lib/pmd-java.jar"/>
-            <pathelement location="${pmd.home}/lib/jaxen.jar"/>
-            <pathelement location="${pmd.home}/lib/asm.jar"/>
-        </path>
         <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask" classpathref="pmd.lib"/>
         <mkdir dir="pmd"/>
         <pmd failuresPropertyName="pmd.num.warnings" rulesetfiles="tools/pmd_ruleset.xml">
@@ -550,12 +549,6 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
     </target>
 
     <target name="cpd-xml" depends="compile, -check_pmd" description="Run CPD on OpenGrok source code, print output in xml">
-        <path id="pmd.lib" >
-            <pathelement location="${pmd.home}/lib/pmd-core.jar"/>
-            <pathelement location="${pmd.home}/lib/pmd-java.jar"/>
-            <pathelement location="${pmd.home}/lib/jaxen.jar"/>
-            <pathelement location="${pmd.home}/lib/asm.jar"/>
-        </path>
         <taskdef name="cpd" classname="net.sourceforge.pmd.cpd.CPDTask" classpathref="pmd.lib"/>
         <cpd minimumTokenCount="100" format="xml" outputFile="pmd/cpd_report.xml">
             <fileset dir="src">
@@ -568,12 +561,6 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
     </target>
 
     <target name="cpd" depends="compile, -check_pmd" description="Run CPD on OpenGrok source code">
-        <path id="pmd.lib" >
-            <pathelement location="${pmd.home}/lib/pmd-core.jar"/>
-            <pathelement location="${pmd.home}/lib/pmd-java.jar"/>
-            <pathelement location="${pmd.home}/lib/jaxen.jar"/>
-            <pathelement location="${pmd.home}/lib/asm.jar"/>
-        </path>
         <taskdef name="cpd" classname="net.sourceforge.pmd.cpd.CPDTask" classpathref="pmd.lib"/>
         <cpd minimumTokenCount="100" outputFile="pmd/cpd_report.txt">
             <fileset dir="src">
