--- a/build.xml
+++ b/build.xml
@@ -172,6 +172,7 @@ Copyright (c) 2005, 2011, Oracle and/or its affiliates. All rights reserved.
         <mkdir dir="${src.generatedsrc.dir}"/>
         <jflex file="${src.dir}/org/opensolaris/opengrok/analysis/plain/PlainXref.lex" destdir="${src.generatedsrc.dir}" inputstreamctor="false"/>
         <jflex file="${src.dir}/org/opensolaris/opengrok/analysis/c/CSymbolTokenizer.lex" destdir="${src.generatedsrc.dir}" inputstreamctor="false"/>
+        <jflex file="${src.dir}/org/opensolaris/opengrok/analysis/c/CScopeParser.lex" destdir="${src.generatedsrc.dir}" inputstreamctor="false"/>
         <jflex file="${src.dir}/org/opensolaris/opengrok/analysis/c/CXref.lex" destdir="${src.generatedsrc.dir}" inputstreamctor="false"/>
         <jflex file="${src.dir}/org/opensolaris/opengrok/analysis/c/CxxSymbolTokenizer.lex" destdir="${src.generatedsrc.dir}" inputstreamctor="false"/>
         <jflex file="${src.dir}/org/opensolaris/opengrok/analysis/c/CxxXref.lex" destdir="${src.generatedsrc.dir}" inputstreamctor="false"/>
