jdk8 , fix ctag definitions to work on solaris too

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,8 +76,8 @@ javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -115,7 +115,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-XX:-UseSplitVerifier -ea -enableassertions:org.opensolaris.opengrok...
+run.jvmargs=-ea -enableassertions:org.opensolaris.opengrok...
 #-javaagent:lib/jacocoagent.jar=destfile=jacoco.exec 
 run.test.classpath=\
     ${javac.test.classpath}:\
