--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,12 +50,14 @@ lucene-core.jar=lucene-core-${lucene.version}.jar
 lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
 lucene-queryparser.jar=lucene-queryparser-${lucene.version}.jar
 lucene-suggest.jar=lucene-suggest-${lucene.version}.jar
+servlet-api.version=2.5
+servlet-api.jar=servlet-api-${servlet-api.version}.jar
 file.reference.lucene-core.jar=lib/${lucene-core.jar}
 file.reference.lucene-analyzers-common.jar=lib/${lucene-analyzers-common.jar}
 file.reference.lucene-queryparser.jar=lib/${lucene-queryparser.jar}
 file.reference.lucene-suggest.jar=lib/${lucene-suggest.jar}
 file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
-file.reference.servlet-api.jar=lib/servlet-api.jar
+file.reference.servlet-api.jar=lib/${servlet-api.jar}
 file.reference.swing-layout-0.9.jar=lib/swing-layout-0.9.jar
 includes=**
 jar.compress=false
