--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
 sonar.projectKey=OpenGrok
 sonar.projectName=OpenGrok analyzed with the SonarQube Runner
-sonar.projectVersion=1.0
+sonar.projectVersion=1.1
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
@@ -14,7 +14,7 @@ sonar.libraries=dist/*.jar,dist/lib/*.jar
 sonar.language=java
 
 #pmd 
-sonar.java.source=1.7
+sonar.java.source=1.8
 
 #findbugs
 sonar.findbugs.excludesFilters=tools/findbugs_filter.xml
@@ -22,8 +22,9 @@ sonar.findbugs.excludesFilters=tools/findbugs_filter.xml
 #code coverage
 sonar.dynamicAnalysis=reuseReports
 sonar.junit.reportsPath=build/test/results/
-sonar.java.coveragePlugin=emma
-sonar.emma.reportPath=coverage/
+sonar.jacoco.reportPath=jacoco.exec
+sonar.java.coveragePlugin=jacoco
+sonar.jacoco.reportMissing.force.zero=true
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
