--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,16 @@
 # Required metadata
 sonar.projectKey=OpenGrok
 sonar.projectName=OpenGrok analyzed with the SonarQube Runner
-sonar.projectVersion=1.1
+sonar.projectVersion=0.13
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=src,test
 #,generatedsrc
-sonar.binaries=build,dist
+sonar.java.binaries=build,dist
 
-sonar.libraries=dist/*.jar,dist/lib/*.jar
+sonar.java.libraries=dist/*.jar,dist/lib/*.jar
+
+sonar.scm.provider=git
 
 # Language
 sonar.language=java
@@ -20,7 +22,6 @@ sonar.java.source=1.8
 sonar.findbugs.excludesFilters=tools/findbugs_filter.xml
 
 #code coverage
-sonar.dynamicAnalysis=reuseReports
 sonar.junit.reportsPath=build/test/results/
 sonar.jacoco.reportPath=jacoco.exec
 sonar.java.coveragePlugin=jacoco
