--- a/logging.properties
+++ b/logging.properties
@@ -44,12 +44,12 @@ java.util.logging.FileHandler.limit = 52428800
 java.util.logging.FileHandler.count = 3
 java.util.logging.FileHandler.level = ALL
 #java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
-java.util.logging.FileHandler.formatter = org.opensolaris.opengrok.SimpleFileLogFormatter
+java.util.logging.FileHandler.formatter = org.opensolaris.opengrok.logger.formatter.SimpleFileLogFormatter
 
 # Limit the message that are printed on the console to WARNING and above (default "quiet" mode).
 # if verbose is set, then log INFO and above
 java.util.logging.ConsoleHandler.level = WARNING
-java.util.logging.ConsoleHandler.formatter = org.opensolaris.opengrok.SimpleConsoleFormatter
+java.util.logging.ConsoleHandler.formatter = org.opensolaris.opengrok.logger.formatter.SimpleConsoleFormatter
 
 
 ############################################################
@@ -60,3 +60,4 @@ java.util.logging.ConsoleHandler.formatter = org.opensolaris.opengrok.SimpleCons
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
 #com.xyz.foo.level = SEVERE
+org.opensolaris.opengrok.level = ALL
